Hostname obfuscation ICE duration telemetry is being reported in milliseconds, not seconds
Categories
(Core :: WebRTC, defect, P2)
Tracking
()
People
(Reporter: dminor, Assigned: dminor)
References
Details
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
When I added the hostname obfuscation ICE duration telemetry in Bug 1569250, I intended for it to be reported in seconds and set the "high" value accordingly, but used the Telemetry::AccumulateTimeDelta call to report it, which reports in milliseconds.
Assignee | ||
Comment 1•6 years ago
|
||
The Telemetry::AccumulateTimeDelta function reports in milliseconds but I had
assumed seconds when I added the hostname obfuscation ICE duration histogram.
This change adjusts the "high" value accordingly.
With the telemetry we've collected to date, 60% of the values are below 600
milliseconds, so I think that setting a high value of 30 seconds should be
sufficient even if there is a long tail. Since this does not change the data
being collected, no additional data-review is required, but it does require
renaming the key.
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Updated•6 years ago
|
![]() |
||
Comment 3•6 years ago
|
||
bugherder |
Assignee | ||
Comment 4•6 years ago
|
||
Comment on attachment 9093076 [details]
Bug 1581577 - Fix ICE duration telemetry high value; r=bwc!
Beta/Release Uplift Approval Request
- User impact if declined: This fixes the telemetry added in Bug 1581577 to have a proper high value for the ice duration, without this, we won't have the full range of values visible in telemetry which would make it harder to determine if enabling hostname obfuscation causes problems.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1569250
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This just changes a telemetry probe. It has been checked on Nightly already.
- String changes made/needed: None
Comment 5•6 years ago
|
||
Comment on attachment 9093076 [details]
Bug 1581577 - Fix ICE duration telemetry high value; r=bwc!
Follow-up fix for bug 1569250. Approved for 70.0b8.
![]() |
||
Comment 6•6 years ago
|
||
bugherder uplift |
Description
•